--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "PhysicsEngine"]
 	path = PhysicsEngine
 	url = https://github.com/DroidFDV/PhysicsEngine
+[submodule "Math_Calculator"]
+	path = Math_Calculator
+	url = https://github.com/ddddoser/Math_Calculator
